CMAKE_MINIMUM_REQUIRED (VERSION 2.8.1)
CMAKE_POLICY (VERSION 2.8.1)

#project name
PROJECT (SWIFT CXX)
SET (TARGET_NAME swift)

if(NOT CMAKE_BUILD_TYPE)
  SET (CMAKE_BUILD_TYPE "Debug")
endif()

SET (CMAKE_CXX_COMPILER "g++")
SET (CMAKE_CXX_FLAGS_DEBUG "-O0")
SET (CMAKE_CXX_FLAGS_RELEASE "-O2 -finline-limit=1000 -DNDEBUG")
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../lib)

INCLUDE_DIRECTORIES (.)
ADD_SUBDIRECTORY (swift)
